feat: add solutions to lc problem: No.1200
No.1200.Minimum Absolute Difference